--- a/app/src/main/res/layout/activity_add_jadwal.xml
+++ b/app/src/main/res/layout/activity_add_jadwal.xml
@@ -19,161 +19,91 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <CheckBox
-        android:id="@+id/jadwal1"
+    <AnalogClock
+        android:id="@+id/analogClock1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
-        android:layout_marginEnd="125dp"
-        android:layout_marginTop="50dp"
-        android:text="Schedule 1"
-        app:layout_constraintBottom_toTopOf="@+id/showtime1"
+        app:layout_constraintBottom_toTopOf="@+id/alarmprompt"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+
+    <Button
+        android:id="@+id/startSetDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
+        android:text="Set Alarm"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/alarmprompt"
+        app:layout_constraintVertical_bias="0.59" />
+
+    <TextView
+        android:id="@+id/alarmprompt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:id="@+id/jadwal2"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="146dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="109dp"
-        android:layout_marginTop="108dp"
-        android:text="Schedule 2"
-        app:layout_constraintBottom_toBottomOf="@+id/jadwal3"
-        app:layout_constraintStart_toStartOf="@+id/jadwal1"
-        app:layout_constraintTop_toTopOf="@+id/jadwal1" />
-
-    <CheckBox
-        android:id="@+id/jadwal3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="152dp"
-        android:text="Schedule 3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/jadwal2" />
-
-    <Button
-        android:id="@+id/btntime1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="90dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginTop="93dp"
-        android:text="time"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/btntime2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/showtime1"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:ems="10"
+        android:hint="Weight (gram)"
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/startSetDialog"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/analogClock1"
+        app:layout_constraintVertical_bias="0.769" />
 
     <TextView
-        android:id="@+id/showtime1"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
-        android:layout_marginEnd="69dp"
-        android:layout_marginStart="172dp"
-        android:hint="time"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/weight1"
-        app:layout_constraintEnd_toStartOf="@+id/btntime1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/jadwal1" />
-
-    <EditText
-        android:id="@+id/weight1"
-        android:layout_width="57dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="58dp"
-        android:ems="10"
-        android:hint="weight"
-        android:inputType="number"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/showtime2"
-        app:layout_constraintEnd_toEndOf="@+id/showtime1"
-        app:layout_constraintStart_toEndOf="@+id/showtime1"
-        app:layout_constraintTop_toBottomOf="@+id/showtime1" />
+        android:text="Add Schedule 1"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.891" />
 
     <Button
-        android:id="@+id/btntime2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="102dp"
-        android:layout_marginEnd="53dp"
-        android:text="time"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/btntime3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/showtime2"
-        app:layout_constraintTop_toBottomOf="@+id/btntime1" />
-
-    <TextView
-        android:id="@+id/showtime2"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
-        android:layout_marginEnd="69dp"
-        android:layout_marginStart="172dp"
-        android:hint="time"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/weight2"
-        app:layout_constraintEnd_toStartOf="@+id/btntime2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weight1" />
-
-    <EditText
-        android:id="@+id/weight2"
-        android:layout_width="57dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="71dp"
-        android:ems="10"
-        android:hint="weight"
-        android:inputType="number"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/showtime3"
-        app:layout_constraintEnd_toEndOf="@+id/showtime2"
-        app:layout_constraintStart_toEndOf="@+id/showtime2"
-        app:layout_constraintTop_toBottomOf="@+id/showtime2" />
+        android:text="Next Schedule"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.153" />
 
     <Button
-        android:id="@+id/btntime3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="115dp"
-        android:layout_marginEnd="53dp"
-        android:text="time"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/showtime3"
-        app:layout_constraintTop_toBottomOf="@+id/btntime2" />
-
-    <TextView
-        android:id="@+id/showtime3"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="21dp"
-        android:layout_marginEnd="69dp"
-        android:layout_marginStart="172dp"
-        android:hint="time"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/weight3"
-        app:layout_constraintEnd_toStartOf="@+id/btntime3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weight2" />
-
-    <EditText
-        android:id="@+id/weight3"
-        android:layout_width="57dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="57dp"
-        android:ems="10"
-        android:hint="weight"
-        android:inputType="number"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/showtime3"
-        app:layout_constraintStart_toEndOf="@+id/showtime3"
-        app:layout_constraintTop_toBottomOf="@+id/showtime3" />
+        android:text="Home"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.779"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.114" />
 
 
 </android.support.constraint.ConstraintLayout>
