--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,10 @@
 
     <Button
         android:id="@+id/addJadwal"
-        android:layout_width="132dp"
-        android:layout_height="0dp"
+        android:layout_width="136dp"
+        android:layout_height="47dp"
         android:layout_marginBottom="108dp"
-        android:layout_marginEnd="86dp"
+        android:layout_marginEnd="104dp"
         android:layout_marginTop="121dp"
         android:text="schedule"
         app:layout_constraintBottom_toTopOf="@+id/feedButton"
@@ -36,11 +36,25 @@
         android:id="@+id/feedButton"
         android:layout_width="127dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="278dp"
-        android:layout_marginEnd="91dp"
+        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="112dp"
         android:text="feed me"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addJadwal" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome to CatFeeder"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.467"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.911" />
 
 </android.support.constraint.ConstraintLayout>
